<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".NoteEditActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="ATOM Notepad"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/showNoteDelActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/delete_note"
            android:textSize="13sp"
            app:backgroundTint="@color/red" />

        <Button
            android:id="@+id/showMainActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/back_to_list"
            android:textSize="13sp"
            app:backgroundTint="@color/lightblue" />

        <Button
            android:id="@+id/saveNoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/save_changes"
            android:textSize="13sp"
            android:onClick="saveData"
            app:backgroundTint="@color/lightblue" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/darkgray"
        android:layout_gravity="left"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textColor="@color/darkgray"
        android:layout_gravity="center"
        app:backgroundTint="@color/lightgray" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contents"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/darkgray"
        android:layout_gravity="left"/>

    <EditText
        android:id="@+id/contentsEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:minLines="1"
        android:textColor="@color/darkgray"
        android:layout_gravity="center"
        app:backgroundTint="@color/lightgray" />

</LinearLayout>